--- a/style.css
+++ b/style.css
@@ -26,11 +26,11 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  overflow-x: hidden; 
+  overflow-x: hidden;
 }
 
 .app-container {
-  display: block; 
+  display: block;
   width: 100%;
   min-height: 100vh;
   box-sizing: border-box;
@@ -46,6 +46,7 @@ body {
   overflow-y: auto;
   scrollbar-width: none;
   z-index: 100;
+  margin-top: -457px;
 }
 
 .teacher-profile {
@@ -69,7 +70,7 @@ body {
 }
 
 .teacher-profile h2 {
-    letter-spacing: 0.13em;
+  letter-spacing: 0.13em;
   font-size: 1.25rem;
   margin-bottom: 0.75rem;
   font-weight: 400;
@@ -121,7 +122,7 @@ body {
 /* Main Content Styling */
 .main-content {
   margin-left: var(--sidebar-width);
-  width: auto; 
+  width: auto;
   min-height: 100vh;
 }
 
@@ -136,6 +137,7 @@ body {
   position: sticky;
   top: 0;
   z-index: 50;
+  margin-left: var(--sidebar-width);
 }
 .logo {
   border-radius: 10%;
@@ -168,8 +170,8 @@ body {
   position: relative;
   height: 380px;
   overflow: hidden;
+  margin-left: var(--sidebar-width);
 }
-
 
 .slider-container {
   height: 100%;
@@ -188,10 +190,10 @@ body {
 }
 
 .slide img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: 50% 10%; /* এটি এক্স এবং ওয়াই অক্ষের একদম সেন্টারে রাখবে */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 50% 10%; /* এটি এক্স এবং ওয়াই অক্ষের একদম সেন্টারে রাখবে */
 }
 
 .slide-overlay {
@@ -383,6 +385,11 @@ th {
   .main-content {
     margin-left: 0;
     width: 100%;
+  }
+
+  .main-header,
+  .hero-carousel {
+    margin-left: 0;
   }
 
   .folder-grid {
